--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+	<header>
+		<div class="contain">
+			<div class="fix_block">
+				<div class="header__logo">
+					<a href="#"><img src="img\logo.png" alt="Логоттип"></a>
+				</div>
+				<div class="header__nav">
+					<a class="enter" href="#">Войти</a>
+					<a class="basket" href="#"><img src="img\basket.png" alt="Покупки"></a>
+				</div>
+
+			</div>
+		</div>
+	</header>
 </body>
 </html>
