Сверстал поле поиска

--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
 					<a class="enter" href="#">Войти</a>
 					<a class="basket" href="#"><img src="img\basket.png" alt="Покупки"></a>
 				</div>
-
 			</div>
 		</div>
 	</header>
+	<main>
+		<section class="search">
+			<div class="contain">
+				<form action="#">
+					<input type="search" name="search" placeholder="Поиск по ресторанам и кухням">
+				</form>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
