Начало блока с ресторанами

--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 	<main>
 		<section class="search">
 			<div class="contain">
-				<form action="#">
-					<input type="search" name="search" placeholder="Поиск по ресторанам и кухням">
+				<form class="search" action="#">
+					<input type="search" name="search" autocomplete="off" placeholder="Поиск по ресторанам и кухням">
 				</form>
 			</div>
+		</section>
+		<section class="restr">
+			<div class="contain">
+				<h1>Рестораны в Москве</h1>
+			</div>
+			
 		</section>
 	</main>
 </body>
