Сверстал основной блок страницы и заготовку для страницы ресторана

--- a/index.html
+++ b/index.html
@@ -35,8 +35,118 @@
 		<section class="restr">
 			<div class="contain">
 				<h1>Рестораны в Москве</h1>
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo1.jpg" alt="">
+									<div class="card__name">Макдоналдс — Газетный</div>
+									<div class="card__menu">₽₽ • Бургеры</div>
+									<div class="card__time">25 - 35 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo2.jpg" alt="">
+									<div class="card__name">DimSum & Co — ЦДМ</div>
+									<div class="card__menu">₽ • Японская • Китайская • Азиатская</div>
+									<div class="card__time">40 - 50 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo3.jpg" alt="">
+									<div class="card__name">ДвижОК — Манежная</div>
+									<div class="card__menu">₽ • Американская • Европейская</div>
+									<div class="card__time">35 - 45 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo4.jpg" alt="">
+									<div class="card__name">НЯ — NHA</div>
+									<div class="card__menu">₽₽ • Вьетнамская</div>
+									<div class="card__time">30 - 40 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo5.jpg" alt="">
+									<div class="card__name">Точка Дзы — Цветной</div>
+									<div class="card__menu">₽₽ • Вьетнамская</div>
+									<div class="card__time">40 - 50 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo6.jpg" alt="">
+									<div class="card__name">Cinnabon</div>
+									<div class="card__menu">₽ • Выпечка • Десерты • Капкейки</div>
+									<div class="card__time">25 - 35 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo7.jpg" alt="">
+									<div class="card__name">PIZZELOVE</div>
+									<div class="card__menu">₽₽ • Пицца</div>
+									<div class="card__time">15 - 25 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo8.jpg" alt="">
+									<div class="card__name">Zю кафе — Тверская</div>
+									<div class="card__menu">₽₽ • Японская</div>
+									<div class="card__time">25 - 35 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<article class="card">
+							<a href="page.html">
+								<div class="card__content">
+									<img class="card__img" src="img\photo9.jpg" alt="">
+									<div class="card__name">Bar BQ Cafe — Манежная</div>
+									<div class="card__menu">₽₽₽ • Европейская</div>
+									<div class="card__time">30 - 40 мин</div>
+								</div>
+							</a>
+						</article>
+					</div>
+				</div>
 			</div>
-			
+
 		</section>
 	</main>
 </body>
