--- a/page.html
+++ b/page.html
@@ -15,7 +15,7 @@
 		<div class="contain">
 			<div class="fix_block">
 				<div class="header__logo">
-					<a href="#"><img src="img\logo.png" alt="Логоттип"></a>
+					<a href="index.html"><img src="img\logo.png" alt="Логоттип"></a>
 				</div>
 				<div class="header__nav">
 					<a class="enter" href="#">Войти</a>
@@ -24,5 +24,12 @@
 			</div>
 		</div>
 	</header>
+	<footer>
+		<div class="contain">
+			<div class="footer">
+				<a href="index.html"><img src="img\white-logo.png" alt="Logo"></a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
