Работа над footer

--- a/index.html
+++ b/index.html
@@ -152,6 +152,34 @@
 		<div class="contain">
 			<div class="footer">
 				<a href="index.html"><img src="img\white-logo.png" alt="Logo"></a>
+				<div class="inform">
+					<div class="row">
+						<div class="col-xs-7 col-sm-3">
+							<form action="#">
+								<div>
+									<select class="lang" name="lang" id="lang">
+										<option selected value="Русский">Русский</option>
+										<option value="Английский">English</option>
+										<option value="Французский">Français</option>
+									</select>
+								</div>
+							</form>
+							<div class="hashtag">
+								<p><span>#</span>UberEats</p>
+							</div>
+							<div class="links">
+								<ul class="links__list">
+									<li class="links__item"><a href="#"><img src="img\facebook^.png" alt=""></a></li>
+									<li class="links__item"><a href="#"><img src="img\twitter^.png" alt=""></a></li>
+									<li class="links__item"><a href="#"><img src="img\instagram^.png" alt=""></a></li>
+
+								</ul>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm"></div>
+						<div class="col-xs-12 col-sm"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</footer>
