--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="contain">
 				<h1>Рестораны в Москве</h1>
 				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -48,7 +48,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -60,7 +60,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -72,7 +72,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -84,7 +84,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -96,7 +96,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -108,7 +108,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -120,7 +120,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -132,7 +132,7 @@
 							</a>
 						</article>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-6 col-lg-4">
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
@@ -153,32 +153,57 @@
 			<div class="footer">
 				<a href="index.html"><img src="img\white-logo.png" alt="Logo"></a>
 				<div class="inform">
-					<div class="row">
-						<div class="col-xs-7 col-sm-3">
-							<form action="#">
-								<div>
-									<select class="lang" name="lang" id="lang">
-										<option selected value="Русский">Русский</option>
-										<option value="Английский">English</option>
-										<option value="Французский">Français</option>
-									</select>
+					<div class="main">
+						<div class="row">
+							<div class="col-xs-7 col-sm-3">
+								<form action="#">
+									<div>
+										<select class="lang" name="lang" id="lang">
+											<option selected value="Русский">Русский</option>
+											<option value="Английский">English</option>
+											<option value="Французский">Français</option>
+										</select>
+									</div>
+								</form>
+								<div class="hashtag">
+									<p><span>#</span>UberEats</p>
 								</div>
-							</form>
-							<div class="hashtag">
-								<p><span>#</span>UberEats</p>
+								<div class="links">
+									<ul class="links__list">
+										<li class="links__item"><a href="#"><img src="img\facebook^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img\twitter^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img\instagram^.png" alt=""></a></li>
+									</ul>
+								</div>
 							</div>
-							<div class="links">
-								<ul class="links__list">
-									<li class="links__item"><a href="#"><img src="img\facebook^.png" alt=""></a></li>
-									<li class="links__item"><a href="#"><img src="img\twitter^.png" alt=""></a></li>
-									<li class="links__item"><a href="#"><img src="img\instagram^.png" alt=""></a></li>
-
-								</ul>
+							<div class="col-xs-12 col-sm-offset-1 col-sm-4">
+								<div class="about">
+									<p>Об UberEats</p>
+									<p>Станьте партнёром по доставке</p>
+									<p>Станьте парнёром-рестораном</p>
+								</div>
 							</div>
-						</div>
-						<div class="col-xs-12 col-sm"></div>
-						<div class="col-xs-12 col-sm"></div>
-					</div>
+							<div class="col-xs-12 col-sm-4">
+								<div class="help">
+									<p>Все города</p>
+									<p>Цены</p>
+									<p>Помощь</p>
+									<p>FAQs</p>
+								</div>
+							</div>
+					    </div>
+				    </div>
+				    <div class="socium">
+				    	<a href="#"><img src="img\Apple.png" alt=""></a>
+				    	<a href="#"><img src="img\GP.png" alt=""></a>
+				    </div>
+				    <div class="other">
+				    	<div class="row">
+				    		<div class="col-xs-12 col-sm"><p>© 2017 Uber Technologies Inc.</p></div>
+				    		<div class="col-xs-12 col-sm"><p>Обработка персональных данных</p></div>
+				    		<div class="col-xs-12 col-sm"><p>Пользовательское соглашение</p></div>
+				    	</div>
+				    </div>
 				</div>
 			</div>
 		</div>
