--- a/page.html
+++ b/page.html
@@ -24,6 +24,25 @@
 			</div>
 		</div>
 	</header>
+	<div class="main__page">
+		<div class="hero">
+			<div class="contain">
+				<div class="row">
+					<div class="col-xs-12 col-sm-7 col-lg-5">
+						<div class="card__restr">
+							<h1 class="restr__name">Трактир «Пушкин»</h1>
+							<div class="descrip">
+								<p class="kitchen">₽₽₽ • Европейская</p>
+								<p class="time">40 - 50 мин</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		
+	
 	<footer>
 		<div class="contain">
 			<div class="footer">
