Завершил блок Hero на странице ресторана

--- a/page.html
+++ b/page.html
@@ -29,11 +29,13 @@
 			<div class="contain">
 				<div class="row">
 					<div class="col-xs-12 col-sm-7 col-lg-5">
-						<div class="card__restr">
-							<h1 class="restr__name">Трактир «Пушкин»</h1>
-							<div class="descrip">
-								<p class="kitchen">₽₽₽ • Европейская</p>
-								<p class="time">40 - 50 мин</p>
+						<div class="card__page">
+							<div class="card__restr">
+								<h1 class="restr__name">Трактир «Пушкин»</h1>
+								<div class="descrip">
+									<p class="kitchen">₽₽₽ • Европейская</p>
+									<p class="time">40 - 50 мин</p>
+								</div>
 							</div>
 						</div>
 					</div>
