--- a/page.html
+++ b/page.html
@@ -29,18 +29,29 @@
 			<div class="contain">
 				<div class="row">
 					<div class="col-xs-12 col-sm-7 col-lg-5">
-						<div class="card__page">
-							<div class="card__restr">
-								<h1 class="restr__name">Трактир «Пушкин»</h1>
-								<div class="descrip">
-									<p class="kitchen">₽₽₽ • Европейская</p>
-									<p class="time">40 - 50 мин</p>
-								</div>
+						<div class="card__restr">
+							<h1 class="restr__name">Трактир «Пушкин»</h1>
+							<div class="descrip">
+								<p class="kitchen">₽₽₽ • Европейская</p>
+								<p class="time">40 - 50 мин</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="list-page">
+			<div class="contain">
+				<ul class="list">
+					<li class="list__item"><a href="#">Закуски</a></li>
+					<li class="list__item"><a href="#">Салаты</a></li>
+					<li class="list__item"><a href="#">Супы</a></li>
+					<li class="list__item"><a href="#">Горячие блюда</a></li>
+					<li class="list__item"><a href="#">Гарниры</a></li>
+					<li class="list__item"><a href="#">Десерты</a></li>
+				</ul>
+			</div>
+			
 		</div>
 	</div>
 		
