Сверстал блок заголовка у .food

--- a/page.html
+++ b/page.html
@@ -50,8 +50,12 @@
 					<li class="list__item"><a href="#">Гарниры</a></li>
 					<li class="list__item"><a href="#">Десерты</a></li>
 				</ul>
+			</div>			
+		</div>
+		<div class="food">
+			<div class="contain">
+				<h2>Закуски</h2>
 			</div>
-			
 		</div>
 	</div>
 		
