Сверстал основной блок страницы ресторана

--- a/page.html
+++ b/page.html
@@ -55,6 +55,61 @@
 		<div class="food">
 			<div class="contain">
 				<h2>Закуски</h2>
+				<div class="food-list__wrapper">
+					<div class="row">
+						<div class="col-lg-6">
+							<ul class="food-list">
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Сельдь на бородинском хлебе</h3>
+										<p>С яйцом и огурцом</p>
+										<div class="price">240 ₽</div>
+									</div>
+									<img src="img/Capture1.jpg" alt="">
+								</li>
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Соленья ассорти</h3>
+										<div class="price">320 ₽</div>
+									</div>
+									<img src="img/Capture2.jpg" alt="">
+								</li>
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Грибы маринованные</h3>
+										<div class="price">300 ₽</div>
+									</div>
+									<img src="img/Capture3.jpg" alt="">
+								</li>
+							</ul>
+						</div>
+						<div class="col-lg-6">
+							<ul class="food-list">
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Сало домашнее с горчицей</h3>
+										<div class="price">320 ₽</div>
+									</div>
+									<img src="img/Capture4.jpg" alt="">
+								</li>
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Малосольная семга</h3>
+										<div class="price">390 ₽</div>
+									</div>
+									<img src="img/Capture5.jpg" alt="">
+								</li>
+								<li class="food-list__item">
+									<div class="item-descrip">
+										<h3 class="item-tittle">Язык говяжий с хреном</h3>
+										<div class="price">320 ₽</div>
+									</div>
+									<img src="img/Capture6.jpg" alt="">
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
