--- a/page.html
+++ b/page.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="main__page">
+	<div id="main" class="main__page">
 		<div class="hero">
 			<div class="contain">
 				<div class="row">
@@ -112,9 +112,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
-		
-	
+	</div>	
 	<footer>
 		<div class="contain">
 			<div class="footer">
@@ -175,5 +173,8 @@
 			</div>
 		</div>
 	</footer>
+	<div class="up-button">
+		<a href="#main"><img src="img/Shape.png" alt=""></a>
+	</div>
 </body>
 </html>
