Доработка кнопки Наверх

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</header>
-	<main id="main">
+	<main>
 		<section class="search">
 			<div class="contain">
 				<form class="search" action="#">
@@ -209,7 +209,9 @@
 		</div>
 	</footer>
 	<div class="up-button">
-		<a href="#main"><img src="img/Shape.png" alt=""></a>
+		<img src="img/Shape.png" alt="">
 	</div>
+	<script src="index.js"></script>
+	
 </body>
 </html>
