--- a/page.html
+++ b/page.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</header>
-	<div id="main" class="main__page">
+	<div class="main__page">
 		<div class="hero">
 			<div class="contain">
 				<div class="row">
@@ -174,7 +174,8 @@
 		</div>
 	</footer>
 	<div class="up-button">
-		<a href="#main"><img src="img/Shape.png" alt=""></a>
+		<img src="img/Shape.png" alt="">
 	</div>
+	<script src="index.js"></script>
 </body>
 </html>
