--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<div class="contain">
 			<div class="fix_block">
 				<div class="header__logo">
-					<a href="index.html"><img src="img\logo.png" alt="Логоттип"></a>
+					<a href="index.html"><img src="img/logo.png" alt="Логоттип"></a>
 				</div>
 				<div class="header__nav">
 					<a class="enter" href="#">Войти</a>
-					<a class="basket" href="#"><img src="img\basket.png" alt="Покупки"></a>
+					<a class="basket" href="#"><img src="img/basket.png" alt="Покупки"></a>
 				</div>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo1.jpg" alt="">
+									<img class="card__img" src="img/photo1.jpg" alt="">
 									<div class="card__name">Макдоналдс — Газетный</div>
 									<div class="card__menu">₽₽ • Бургеры</div>
 									<div class="card__time">25 - 35 мин</div>
@@ -52,7 +52,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo2.jpg" alt="">
+									<img class="card__img" src="img/photo2.jpg" alt="">
 									<div class="card__name">DimSum & Co — ЦДМ</div>
 									<div class="card__menu">₽ • Японская • Китайская • Азиатская</div>
 									<div class="card__time">40 - 50 мин</div>
@@ -64,7 +64,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo3.jpg" alt="">
+									<img class="card__img" src="img/photo3.jpg" alt="">
 									<div class="card__name">ДвижОК — Манежная</div>
 									<div class="card__menu">₽ • Американская • Европейская</div>
 									<div class="card__time">35 - 45 мин</div>
@@ -76,7 +76,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo4.jpg" alt="">
+									<img class="card__img" src="img/photo4.jpg" alt="">
 									<div class="card__name">НЯ — NHA</div>
 									<div class="card__menu">₽₽ • Вьетнамская</div>
 									<div class="card__time">30 - 40 мин</div>
@@ -88,7 +88,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo5.jpg" alt="">
+									<img class="card__img" src="img/photo5.jpg" alt="">
 									<div class="card__name">Точка Дзы — Цветной</div>
 									<div class="card__menu">₽₽ • Вьетнамская</div>
 									<div class="card__time">40 - 50 мин</div>
@@ -100,7 +100,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo6.jpg" alt="">
+									<img class="card__img" src="img/photo6.jpg" alt="">
 									<div class="card__name">Cinnabon</div>
 									<div class="card__menu">₽ • Выпечка • Десерты • Капкейки</div>
 									<div class="card__time">25 - 35 мин</div>
@@ -112,7 +112,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo7.jpg" alt="">
+									<img class="card__img" src="img/photo7.jpg" alt="">
 									<div class="card__name">PIZZELOVE</div>
 									<div class="card__menu">₽₽ • Пицца</div>
 									<div class="card__time">15 - 25 мин</div>
@@ -124,7 +124,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo8.jpg" alt="">
+									<img class="card__img" src="img/photo8.jpg" alt="">
 									<div class="card__name">Zю кафе — Тверская</div>
 									<div class="card__menu">₽₽ • Японская</div>
 									<div class="card__time">25 - 35 мин</div>
@@ -136,7 +136,7 @@
 						<article class="card">
 							<a href="page.html">
 								<div class="card__content">
-									<img class="card__img" src="img\photo9.jpg" alt="">
+									<img class="card__img" src="img/photo9.jpg" alt="">
 									<div class="card__name">Bar BQ Cafe — Манежная</div>
 									<div class="card__menu">₽₽₽ • Европейская</div>
 									<div class="card__time">30 - 40 мин</div>
@@ -151,7 +151,7 @@
 	<footer>
 		<div class="contain">
 			<div class="footer">
-				<a href="index.html"><img src="img\white-logo.png" alt="Logo"></a>
+				<a href="index.html"><img src="img/white-logo.png" alt="Logo"></a>
 				<div class="inform">
 					<div class="main">
 						<div class="row">
@@ -170,9 +170,9 @@
 								</div>
 								<div class="links">
 									<ul class="links__list">
-										<li class="links__item"><a href="#"><img src="img\facebook^.png" alt=""></a></li>
-										<li class="links__item"><a href="#"><img src="img\twitter^.png" alt=""></a></li>
-										<li class="links__item"><a href="#"><img src="img\instagram^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/facebook^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/twitter^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/instagram^.png" alt=""></a></li>
 									</ul>
 								</div>
 							</div>
@@ -194,8 +194,8 @@
 					    </div>
 				    </div>
 				    <div class="socium">
-				    	<a href="#"><img src="img\Apple.png" alt=""></a>
-				    	<a href="#"><img src="img\GP.png" alt=""></a>
+				    	<a href="#"><img src="img/Apple.png" alt=""></a>
+				    	<a href="#"><img src="img/GP.png" alt=""></a>
 				    </div>
 				    <div class="other">
 				    	<div class="row">
