--- a/page.html
+++ b/page.html
@@ -15,11 +15,11 @@
 		<div class="contain">
 			<div class="fix_block">
 				<div class="header__logo">
-					<a href="index.html"><img src="img\logo.png" alt="Логоттип"></a>
+					<a href="index.html"><img src="img/logo.png" alt="Логоттип"></a>
 				</div>
 				<div class="header__nav">
 					<a class="enter" href="#">Войти</a>
-					<a class="basket" href="#"><img src="img\basket.png" alt="Покупки"></a>
+					<a class="basket" href="#"><img src="img/basket.png" alt="Покупки"></a>
 				</div>
 			</div>
 		</div>
@@ -116,7 +116,7 @@
 	<footer>
 		<div class="contain">
 			<div class="footer">
-				<a href="index.html"><img src="img\white-logo.png" alt="Logo"></a>
+				<a href="index.html"><img src="img/white-logo.png" alt="Logo"></a>
 				<div class="inform">
 					<div class="main">
 						<div class="row">
@@ -135,9 +135,9 @@
 								</div>
 								<div class="links">
 									<ul class="links__list">
-										<li class="links__item"><a href="#"><img src="img\facebook^.png" alt=""></a></li>
-										<li class="links__item"><a href="#"><img src="img\twitter^.png" alt=""></a></li>
-										<li class="links__item"><a href="#"><img src="img\instagram^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/facebook^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/twitter^.png" alt=""></a></li>
+										<li class="links__item"><a href="#"><img src="img/instagram^.png" alt=""></a></li>
 									</ul>
 								</div>
 							</div>
@@ -159,8 +159,8 @@
 					    </div>
 				    </div>
 				    <div class="socium">
-				    	<a href="#"><img src="img\Apple.png" alt=""></a>
-				    	<a href="#"><img src="img\GP.png" alt=""></a>
+				    	<a href="#"><img src="img/Apple.png" alt=""></a>
+				    	<a href="#"><img src="img/GP.png" alt=""></a>
 				    </div>
 				    <div class="other">
 				    	<div class="row">
